# rust-image-engine

./: Makefile  README.md  docker-compose.yml  docker-compose.yml.bak  nginx.conf  prometheus.yml  pyproject.toml  script.js
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  main.rs.bak
frontend/: Dockerfile  Dockerfile.bak  package-lock.json
frontend/app/: ComponentSwapper.tsx  PhotoComponent.tsx  page.tsx
node-backend/: Dockerfile  Dockerfile.bak  README.md  index.js  package-lock.json  package.json
tests/: README.md  test_integration.py
